add image upload and delete via cloudflare r2

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,12 @@ NEXTAUTH_URL="http://localhost:3000"
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
+# Cloudflare r2 stuff for image uploads
+
+CLOUDFLARE_ID= 
+R2_ACCESS_ID= #Get this by creating an api token for your R2 bucket
+R2_SECRET_KEY= #Get this by creating an api token for your R2 bucket
+
+
+R2_BUCKET_NAME= #R2 bucket name
+R2_PUBLIC_URL= #R2 public url
