--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@aws-sdk/s3-request-presigner": "^3.272.0",
     "@headlessui/react": "^1.7.11",
     "@next-auth/prisma-adapter": "^1.0.5",
+    "@next/font": "^13.1.6",
     "@prisma/client": "^4.9.0",
+    "@radix-ui/react-icons": "^1.2.0",
     "@tanstack/react-query": "^4.20.2",
     "@trpc/client": "^10.9.0",
     "@trpc/next": "^10.9.0",
