refactor files and await query invalidation for get all products

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,13 @@
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.cjs", "**/*.mjs"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.cjs",
+    "**/*.mjs",
+    "./src/types/globals.d.ts"
+  ],
   "exclude": ["node_modules"]
 }
