--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/client-s3": "^3.272.0",
     "@aws-sdk/s3-request-presigner": "^3.272.0",
     "@headlessui/react": "^1.7.11",
+    "@headlessui/tailwindcss": "^0.1.2",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "^13.1.6",
     "@prisma/client": "^4.11.0",
