--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/s3-request-presigner": "^3.272.0",
     "@headlessui/react": "^1.7.11",
     "@headlessui/tailwindcss": "^0.1.2",
+    "@hookform/resolvers": "^2.9.11",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "^13.1.6",
     "@prisma/client": "^4.11.0",
@@ -29,6 +30,7 @@
     "next-auth": "^4.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.4",
     "sharp": "^0.31.3",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
