--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
     "class-variance-authority": "^0.4.0",
+    "framer-motion": "^10.2.3",
     "next": "13.1.6",
     "next-auth": "^4.19.0",
     "react": "18.2.0",
