--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.272.0",
     "@aws-sdk/s3-request-presigner": "^3.272.0",
+    "@floating-ui/react-dom": "^1.3.0",
     "@headlessui/react": "^1.7.11",
     "@headlessui/tailwindcss": "^0.1.2",
     "@hookform/resolvers": "^2.9.11",
