--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.4",
+    "react-hot-toast": "^2.4.0",
     "sharp": "^0.31.3",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
