--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "analyze": "ANALYZE=true npm run build",
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
@@ -17,6 +18,7 @@
     "@headlessui/tailwindcss": "^0.1.2",
     "@hookform/resolvers": "^2.9.11",
     "@next-auth/prisma-adapter": "^1.0.5",
+    "@next/bundle-analyzer": "^13.2.4",
     "@next/font": "^13.1.6",
     "@prisma/client": "^4.11.0",
     "@radix-ui/react-icons": "^1.2.0",
