--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "react-hook-form": "^7.43.4",
     "react-hot-toast": "^2.4.0",
     "sharp": "^0.31.3",
-    "superjson": "1.9.1",
+    "superjson": "^1.12.2",
     "zod": "^3.20.2"
   },
   "devDependencies": {
