--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "next lint",
     "start": "next start"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.272.0",
     "@aws-sdk/s3-request-presigner": "^3.272.0",
@@ -56,6 +59,7 @@
     "prettier-plugin-tailwindcss": "^0.2.1",
     "prisma": "^4.11.0",
     "tailwindcss": "^3.2.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "ct3aMetadata": {
