--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,9 @@ R2_SECRET_KEY= #Get this by creating an api token for your R2 bucket
 
 R2_BUCKET_NAME= #R2 bucket name
 R2_PUBLIC_URL= #R2 public url
+
+ADMIN_USER_EMAIL= #the email under which seed (demo) products will be registered under
+
+STRIPE_PUBLISH_KEY= #Get this from the stripe dashboard
+
+STRIPE_SECRET_KEY= #Get this from the stripe dashboard
