--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.43.4",
     "react-hot-toast": "^2.4.0",
     "sharp": "^0.31.3",
+    "stripe": "^12.9.0",
     "superjson": "^1.12.2",
     "zod": "^3.20.2"
   },
